Fix hexception that would kill frontend, fix icons on safari

--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -261,7 +261,7 @@
                 opacity: 1;
                 position: absolute;
                 display: block;
-                top: 105px;
+                top: 160px;
                 left: 150px;
                 animation-name: floatAnimation;
                 animation-duration: 7s;
@@ -280,7 +280,7 @@
                 border-radius: 50%;
                 display: block;
                 position: absolute;
-                bottom: 145px;       
+                bottom: 100px;       
                 right: 30px;
                 z-index: -1;
                 animation-name: floatAnimation2;
@@ -850,7 +850,7 @@
         
         &:before:hover {
             background: #000;
-
+            
         }
 
         &:after {
